--- a/index.html
+++ b/index.html
@@ -1,18 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>module2-assignment</title>
-    <link rel="stylesheet" href="css\style.css">
-</head>
-<body>
-    <h1>Responsive Layout</h1>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Assignment 3</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <header>
+      <nav id="header-nav" class="navbar navbar-inverse">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand pull-left" href="index.html">food, llc</a>
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul
+              id="nav-list"
+              class="nav navbar-nav navbar-right hidden-lg hidden-md"
+            >
+              <li class="round">
+                <a href="" class="hidden-lg hidden-md hidden-sm">
+                  <span class="visible-xs">chicken</span></a
+                >
+              </li>
+              <li class="round">
+                <a href="" class="hidden-lg hidden-md hidden-sm">
+                  <span class="visible-xs">Beef</span></a
+                >
+              </li>
+              <li class="round">
+                <a href="" class="hidden-lg hidden-md hidden-sm">
+                  <span class="visible-xs">Shushi</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="main-content">
+      <h1>our menu</h1>
+      <div class="row1">
+        <div id="tall" class="chicken">
+          <h2>chicken</h2>
+          <p>
+            Lorem ipsum dolor sit Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Vel quasi modi voluptatibus sed odit nulla alias
+            error repudiandae reprehenderit corporis fugiat, id hic corrupti,
+            minus sit culpa natus velit similique illo repellendus tempora rerum
+            eaque atque. Minus, nihil eligendi sed incidunt vitae suscipit eaque
+            assumenda alias natus excepturi rem maxime obcaecati sit. Totam
+            ipsam, quibusdam omnis culpa consequuntur placeat mollitia corporis
+            deleniti qui error saepe eius neque aliquam, sed natus! Omnis itaque
+            amet quibusdam sint unde, odit dicta quos! Velit sunt, aut maxime id
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+            facere distinctio omnis quasi soluta iure illo illum dicta.
+            Repellat, incidunt repellendus alias molestias omnis porro veniam
+            commodi ea fugit natus earum accusantium aut amet laboriosam quo?
+            Accusantium laudantium neque, quae veniam est voluptate nemo
+            reiciendis? Accusamus vero numquam ea ducimus? Nemo distinctio ab
+            eos laboriosam impedit tempora quo molestias error totam
+            voluptatibus aperiam dolores minima, quisquam blanditiis unde quam
+            numquam commodi laborum adipisci tenetur repudiandae sequi. Rerum
+            totam illo tempore doloribus doloremque autem ea iusto natus
+            voluptatibus explicabo minus accusantium aspernatur placeat, optio,
+            voluptatum ullam ducimus rem deleniti omnis dolore velit eum
+            perferendis aut? Quaerat iusto eaque nulla, doloribus necessitatibus
+            laborum doloremque! Vitae ad adipisci aspernatur accusantium!
+            Voluptates, rem sapiente voluptatum quaerat distinctio dignissimos,
+            tempora provident praesentium alias voluptate consequuntur fugit
+            enim molestias id quidem quas repudiandae maxime ipsa! Tempora
+            quaerat quasi voluptatem placeat velit eaque eveniet consequatur eos
+            assumenda labore molestias harum ex deleniti aliquam possimus,
+            veritatis quod aspernatur a ducimus sint, animi ab fugit, qui
+            libero. Praesentium voluptatibus voluptates sint. Minus adipisci
+            fugiat incidunt eos blanditiis eum possimus molestiae, culpa
+            quisquam similique deleniti facere libero quibusdam ea illo,
+            laboriosam praesentium dolorum qui cupiditate? Obcaecati, amet
+            laudantium! Ullam sapiente impedit nemo fugiat! Magni vel fuga
+            ducimus. Totam praesentium aperiam labore nemo maxime cum ullam
+            laborum, aliquam voluptas, architecto dolores iste! Ea a
+            voluptatibus molestias, atque perferendis eius provident aperiam
+            quam mollitia asperiores modi quasi ipsa distinctio! Beatae animi
+            inventore deserunt porro perspiciatis nisi blanditiis ex nemo natus,
+            corrupti esse hic. Maiores laudantium, minima facere quibusdam
+            dolores iusto unde autem recusandae. Porro nam minus, ipsam sit
+            alias fugiat maxime dolores! Similique excepturi dolore sint sequi
+            fuga dolorum repellat, eaque numquam eius eum, necessitatibus maxime
+            fugiat placeat aspernatur ad odit illo corrupti velit reiciendis
+            repudiandae et inventore dolorem rem odio! Ducimus veniam sunt est
+            adipisci nulla, reiciendis illo odit totam corporis sed, error autem
+            sequi quae unde, aut omnis! Quaerat enim quam deleniti fugit, illum
+            architecto impedit labore molestias saepe tempore et sunt aspernatur
+            eum rem provident id quo porro beatae vel odio eligendi sit. Ipsum
+            quae modi beatae, quam saepe sunt eveniet nihil maxime vero ad
+            numquam repellendus quis perspiciatis nostrum animi iusto soluta
+            sapiente consectetur, sint ea dolorem accusantium! Voluptas, animi?
+            Saepe fugiat adipisci facilis laudantium. Eos error est sit illo
+            ipsa eaque assumenda nostrum quas esse debitis beatae, ullam libero
+            rerum illum! Ea dolorum expedita praesentium fugiat provident odit
+            sequi non qui? Omnis unde, suscipit dolor recusandae, aperiam itaque
+            odio autem voluptas assumenda est hic sapiente sint voluptatibus,
+            quod doloremque porro vel deleniti. Quis, illo unde officia facilis
+            sint quae veniam corporis omnis! Suscipit modi dolores explicabo
+            excepturi, magnam molestias unde perferendis eaque? Vitae fugit
+            aspernatur sapiente eos beatae unde perspiciatis, pariatur
+            consequatur dignissimos, quis, iste id commodi fuga ad dolorum
+            consequuntur iusto repellat! Laboriosam fugiat ab tempora
+            reprehenderit sunt, voluptatum odit praesentium qui obcaecati
+            explicabo consequuntur delectus nam libero architecto officia nisi
+            necessitatibus debitis, tempore accusamus! Alias possimus id ut
+            eveniet reprehenderit dolorum. Ullam culpa vero facere. quidem
+            recusandae impedit debitis veniam in, error aspernatur quos
+            perferendis, quas commodi. Eligendi et nemo obcaecati! amet
+            consectetur adipisicing elit. Iusto harum ex voluptatum repudiandae
+            quas nesciunt officiis esse laudantium cupiditate quod ut iste
+            suscipit doloribus officia, sunt expedita, enim exercitationem hic
+            reiciendis culpa, doloremque voluptate eveniet? Labore ratione
+            voluptas cupiditate odit, nemo laborum. Iure facere eveniet
+            asperiores ad reiciendis optio consequuntur. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Vitae illum veritatis accusamus
+            magnam adipisci. Eos omnis recusandae, enim dolorum doloribus
+            quidem, fugit quisquam fugiat modi officia voluptates, quis
+            praesentium numquam? Reiciendis, molestiae esse. Iusto similique
+            quas nam. Enim accusantium natus sed perferendis nobis, laboriosam
+            quas quae architecto, aut illum alias.
+          </p>
+        </div>
+        <div class="chicken">
+          <h2>chicken</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum
+            ex voluptatum repudiandae quas nesciunt officiis esse laudantium
+            cupiditate quod ut iste suscipit doloribus officia, sunt expedita,
+            enim exercitationem hic reiciendis culpa, doloremque voluptate
+            eveniet? Labore ratione voluptas cupiditate odit, nemo laborum. Iure
+            facere eveniet asperiores ad reiciendis optio consequuntur. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Esse neque
+            officiis quis cumque harum nulla at facilis. Tempore ut vero, fugit
+            fuga provident obcaecati, adipisci neque aliquid ducimus doloremque
+            corrupti reprehenderit repellat enim sint veniam sed. Minus rerum,
+            itaque totam repellendus magni ab officiis quidem! Nisi asperiores
+            impedit delectus et!
+          </p>
+        </div>
+        <div class="chicken">
+          <h2>chicken</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum
+            ex voluptatum repudiandae quas nesciunt officiis esse laudantium
+            cupiditate quod ut iste suscipit doloribus officia, sunt expedita,
+            enim exercitationem hic reiciendis culpa, doloremque voluptate
+            eveniet? Labore ratione voluptas cupiditate odit, nemo laborum. Iure
+            facere eveniet asperiores ad reiciendis optio consequuntur. Lorem
+            ipsum dolor sit amet, consectetur adipisicing elit. Delectus sint
+            saepe dolorem id fugit nesciunt, hic officiis culpa earum? Debitis
+            sint nostrum, magni distinctio esse asperiores? Eum consectetur
+            porro placeat, dicta amet assumenda mollitia aliquid eligendi eos
+            cumque alias quae ipsum asperiores tempore. Itaque libero vero quis,
+            ipsa eos delectus!
+          </p>
+        </div>
+      </div>
+    </div>
 
-<div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-12"><section>BIRD</section><p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, sit.</p></div>
-  <div class="col-lg-4 col-md-6 col-sm-12"><section>REPTILES</section><p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, blanditiis.</p></div>
-  <div class="col-lg-4 col-md-12 col-sm-12"><SEction>FISH</SEction><p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, nulla?</p></div>
-</div>
-</body>
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
