--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>module2-assignment</title>
-    <link rel="stylesheet" href="css\style.css">
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
-    <h1>Responsive Layout</h1>
-
-<div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-12"><section>BIRD</section><p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, sit.</p></div>
-  <div class="col-lg-4 col-md-6 col-sm-12"><section>REPTILES</section><p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, blanditiis.</p></div>
-  <div class="col-lg-4 col-md-12 col-sm-12"><SEction>FISH</SEction><p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, nulla?</p></div>
-</div>
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
